bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:5: error: '=>' expected but '(' found.
    case(i,j,true) (if i<0 && j<0) => return true
                   ^