bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (a,b,negative) match {
    case (i,j,false) if (i<0 && j>0) => return true
    case (i,j,false) if (i>0 && j<0) => return true
    case(i,j,true) (if i<0 && j<0) => return true
    case _ => return false
  }
}